# _blank

./: .gitignore  Cargo.toml  README.md
assets/shaders/: triangle.frag.shader  triangle.vert.shader
lib/gl/: .gitignore  Cargo.toml  build.rs
lib/gl/src/: lib.rs
lib/render_gl_derive/: Cargo.toml
src/: input.rs  main.rs  resources.rs  triangle.rs
src/geometry/: mod.rs  square.rs  triangle.rs  vertex.rs
src/render_gl/: buffer.rs  color_buffer.rs  data.rs  mod.rs  shader.rs  texture.rs  viewport.rs
